# some-web-scraper

./: .gitignore  .pre-commit-config.yaml  README.md  fitaudit.py  mypy.ini  pyproject.toml
app/: __init__.py
app/detail/: nutrient.py  nutrient_parser.py  product.py  product_parser.py
app/errors/: errors.json
app/page/: categories.py  norm.py  nutrients.py  products.py
app/utils/: a_json.py  markdown.py  soup.py  tasks.py
fitaudit/: __init__.py
fitaudit/detail/: nutrient.py  nutrient_parser.py  product.py  product_parser.py
fitaudit/page/: categories.py  norm.py  nutrients.py  products.py
fitaudit/utils/: a_json.py  soup.py  tasks.py
