[tool.poetry]
name = "fitaudit"
version = "0.1.0"
description = "training scraper"
authors = ["Your Name <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
aiofiles = "^24.1.0"
aiohttp = "^3.10.10"
aioitertools = "^0.12.0"
beautifulsoup4 = "^4.12.3"
lxml = "^5.3.0"

[tool.poetry.group.dev.dependencies]
pytest = "^8.3.3"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
